First implementation of authorizing users

--- a/src/main/webapp/app/components/login/LoginView.html
+++ b/src/main/webapp/app/components/login/LoginView.html
@@ -5,6 +5,7 @@
         <h3 translate="tatami.login.subtitle"></h3>
         <a ui-sref="tatami.about.presentation"><h4 translate="tatami.login.moreInfo"></h4></a>
     </div>
+    <div ng-show="$state.current.data.loginState" class="alert alert-danger" translate="tatami.login.fail"></div>
     <div class="col-span-12">
 
 
