--- a/src/main/webapp/app/components/login/ManualLoginView.html
+++ b/src/main/webapp/app/components/login/ManualLoginView.html
@@ -4,6 +4,22 @@
             <h4 class="panel-title text-center" translate="tatami.login.title"></h4>
         </div>
         <div class="panel-body">
+            <form accept-charset="utf-8" id="loginForm">
+                <fieldset>
+                    <div class="control-group">
+                        <input id="j_username" name="j_username" type="email" ng-model="user.email" required="required" placeholder="{{ 'tatami.login.email' | translate }}" autofocus>
+                    </div>
+                    <div class="control-group">
+                        <input id="j_password" name="j_password" type="password" ng-model="user.password" required="required" placeholder="{{ 'tatami.login.password' | translate }}">
+                    </div>
+                    <div class="control-group">
+                        <input id="_spring_security_remember_me" name="_spring_security_remember_me" type="checkbox">
+                        <span translate="tatami.login.remember"></span>
+                    </div>
+                    <button ng-click="login()" id="loginButton" class="btn btn-primary btn-block text-center" translate="tatami.login.title"></button>
+                </fieldset>
+            </form>
+            <!--
             <form action="/tatami/authentication" method="post" accept-charset="utf-8" id="loginForm">
                 <fieldset>
                     <div class="control-group">
@@ -19,6 +35,7 @@
                     <button type="submit" id="loginButton" class="btn btn-primary btn-block text-center" translate="tatami.login.title"></button>
                 </fieldset>
             </form>
+            -->
         </div>
     </div>
 
