--- a/src/main/webapp/app/components/account/AccountView.html
+++ b/src/main/webapp/app/components/account/AccountView.html
@@ -14,10 +14,10 @@
                                 </div>
                                 <br>
                                 <div>
-                                    <a ui-sref="home.profile.statuses({ username: profile.username })">
+                                    <a ui-sref="tatami.home.profile.statuses({ username: profile.username })">
                                         <h3 class="user-profile">{{ profile.firstName + ' ' + profile.lastName }}</h3>
                                     </a>
-                                    <a ui-sref="home.profile.statuses({ username: profile.username })">
+                                    <a ui-sref="tatami.home.profile.statuses({ username: profile.username })">
                                         <p>@{{ profile.username }}</p>
                                     </a>
                                 </div>
