--- a/src/main/webapp/app/components/account/sotd/DailyStatusView.html
+++ b/src/main/webapp/app/components/account/sotd/DailyStatusView.html
@@ -21,13 +21,13 @@
                                 <img class="img-rounded img-medium" ng-style="{ 'background-image': 'url(' + user.info.avatarURL + ')' }">
                             </div>
                             <h4>
-                                <a ui-sref="home.profile.statuses({ username: user.info.username })">
+                                <a ui-sref="tatami.home.profile.statuses({ username: user.info.username })">
                                     <strong>
                                         {{ user.info.firstName + ' ' + user.info.lastName }}
                                     </strong>
                                 </a>
                                 <br>
-                                <a ui-sref="home.profile.statuses({ username: user.info.username })">
+                                <a ui-sref="tatami.home.profile.statuses({ username: user.info.username })">
                                     <small>
                                         @{{ user.info.username }}
                                     </small>
