--- a/src/main/webapp/app/components/account/groups/manage/GroupsManageView.html
+++ b/src/main/webapp/app/components/account/groups/manage/GroupsManageView.html
@@ -56,13 +56,13 @@
                             <img class="img-rounded img-medium" ng-style="{ 'background-image': 'url(' + member.avatarURL + ')' }">
                         </div>
                         <h4>
-                            <a ui-sref="home.profile.statuses({ username: member.username })">
+                            <a ui-sref="tatami.home.profile.statuses({ username: member.username })">
                                 <strong>
                                     {{ member.firstName + ' ' + member.lastName }}
                                 </strong>
                             </a>
                             <br>
-                            <a ui-sref="home.profile.statuses({ username: member.username })">
+                            <a ui-sref="tatami.home.profile.statuses({ username: member.username })">
                                 <small>
                                     @{{ member.username }}
                                 </small>
@@ -107,13 +107,13 @@
                                     <img class="img-rounded img-medium" ng-style="{ 'background-image': 'url(' + member.avatarURL + ')' }">
                                 </div>
                                 <h4>
-                                    <a ui-sref="home.profile.statuses({ username: member.username })">
+                                    <a ui-sref="tatami.home.profile.statuses({ username: member.username })">
                                         <strong>
                                             {{ member.firstName + ' ' + member.lastName }}
                                         </strong>
                                     </a>
                                     <br>
-                                    <a ui-sref="home.profile.statuses({ username: member.username })">
+                                    <a ui-sref="tatami.home.profile.statuses({ username: member.username })">
                                         <small>
                                             @{{ member.username }}
                                         </small>
