--- a/src/main/webapp/app/components/account/users/UsersView.html
+++ b/src/main/webapp/app/components/account/users/UsersView.html
@@ -31,7 +31,7 @@
                     </strong>
                 </a>
                 <br>
-                <a ui-sref="home.profile.statuses({ username: user.username })">
+                <a ui-sref="tatami.home.profile.statuses({ username: user.username })">
                     <small>
                         @{{ user.username }}
                     </small>
