Restructured login page so that registering has its own view. Authorization needs some improvement, but it is correctly forcing the user to be logged in to access the site. It handles redirection to login page, and then back to previously accessed state.

--- a/src/main/webapp/app/components/login/LoginView.html
+++ b/src/main/webapp/app/components/login/LoginView.html
@@ -10,8 +10,13 @@
 
 
         <div ui-view="googleLogin"></div>
-        <div ui-view="manualLogin"></div>
+        <div class="col-span-4">
+            <div ui-view="manualLogin"></div>
+            <div ui-view="recoverPassword"></div>
+        </div>
         <div ui-view="register"></div>
+
+        <div class="panel-body">
 
 
 
