--- a/src/main/webapp/app/components/login/recoverPassword/RecoverPasswordView.html
+++ b/src/main/webapp/app/components/login/recoverPassword/RecoverPasswordView.html
@@ -3,10 +3,10 @@
         <h4 class="panel-title text-center" translate="tatami.login.forgotPassword"></h4>
     </div>
     <div class="panel-body">
-        <form action="/tatami/lostpassword" method="post" accept-charset="utf-8">
+        <form ng-submit="resetPassword()" accept-charset="utf-8">
             <fieldset>
                 <div class="control-group">
-                    <input name="email" type="email" required="required" placeholder="{{ 'tatami.login.email' | translate }}">
+                    <input ng-model="user.email" name="email" type="email" required="required" placeholder="{{ 'tatami.login.email' | translate }}">
                 </div>
                 <button type="submit" class="btn btn-primary btn-block text-center" translate="tatami.login.resetPassword"></button>
             </fieldset>
