Added support for arbitrarily many publlic pages (rather than just having the login page be public)

--- a/src/main/webapp/app/components/login/google/GoogleLoginView.html
+++ b/src/main/webapp/app/components/login/google/GoogleLoginView.html
@@ -13,7 +13,7 @@
                 </fieldset>
             </form>
             <div class="control-group">
-                <button type="button" class="btn btn-info btn-block little-padding text-center" ui-sref="about.tos" translate="tatami.login.tos"></button>
+                <button type="button" class="btn btn-info btn-block little-padding text-center" ui-sref="tatami.about.tos" translate="tatami.login.tos"></button>
             </div>
             <ul class="list-group">
                 <li class="list-group-item">
