--- a/src/main/webapp/app/components/login/google/GoogleLoginView.html
+++ b/src/main/webapp/app/components/login/google/GoogleLoginView.html
@@ -4,7 +4,7 @@
             <h4 class="panel-title text-center" translate="tatami.login.googleApps.title"></h4>
         </div>
         <div class="panel-body">
-            <form action="/tatami/j_spring_openid_security_check" method="post" accept-charset="utf-8">
+            <form ng-submit="login()" accept-charset="utf-8">
                 <fieldset>
                     <input name="openid_identifier" type="hidden" value="https://www.google.com/accounts/o8/id">
                     <div class="control-group">
