Added backend code to determine user roles. Can now resolve the roles and determine if a user is an admin. Added the ability to see the deactivate button if the user is an admin, but have not added functionality

--- a/src/main/webapp/app/components/account/users/UsersView.html
+++ b/src/main/webapp/app/components/account/users/UsersView.html
@@ -36,6 +36,11 @@
                         @{{ user.username }}
                     </small>
                 </a>
+                <span ng-show="isAdmin" class="desactivateUser pointer pull-right label label-danger">
+                    <span class="glyphicon glyphicon-minus">
+                        Deactivate
+                    </span>
+                </span>
             </h4>
         </div>
     </div>
