--- a/src/main/webapp/app/components/admin/AdminView.html
+++ b/src/main/webapp/app/components/admin/AdminView.html
@@ -1,6 +1,6 @@
 <ng-include src="'/app/shared/topMenu/TopMenuView.html'"></ng-include>
 <div id="mainPanel" class="container">
-    <div ng-show="showReindexMessage" class="alert alert-success" translate="tatami.admin.success"></div>
+    <div ng-show="$stateParams.message === 'reindex'" class="alert alert-success" translate="tatami.admin.success"></div>
     <div class="row">
         <div class="col-span-12">
             <h1 translate="tatami.admin.title"></h1>
