--- a/src/main/webapp/app/components/login/LoginView.html
+++ b/src/main/webapp/app/components/login/LoginView.html
@@ -1,4 +1,3 @@
-<ng-include src="'/app/shared/topMenu/TopMenuView.html'"></ng-include>
 <div id="mainPanel" class="container well well-sm">
     <div class="text-center well well-sm">
         <h1 translate="tatami.login.mainTitle"></h1>
@@ -19,9 +18,6 @@
         </div>
         <div ui-view="register"></div>
 
-        <div class="panel-body">
-
-
-
+        <div class="panel-body"></div>
     </div>
 </div>
