--- a/src/main/webapp/app/components/home/timeline/TimelineHeaderView.html
+++ b/src/main/webapp/app/components/home/timeline/TimelineHeaderView.html
@@ -21,8 +21,8 @@
     </ul>
     <section class="tatams-content tatams-margin">
         <div class="tatams-content-title">
-            <h3>
-                <strong ng-show="$state.current.name == 'tatami.home.home.timeline'" translate="tatami.home.timeline"></strong>
+            <h3 ng-cloak>
+                <strong ng-if="$state.includes('tatami.home.home.timeline')" translate="tatami.home.timeline"></strong>
                 <strong ng-if="$state.current.name == 'tatami.home.home.mentions'" translate="tatami.home.mentions"></strong>
                 <strong ng-if="$state.current.name == 'tatami.home.home.favorites'" translate="tatami.home.favorites"></strong>
                 <strong ng-if="$state.current.name == 'tatami.home.home.company'" translate="tatami.home.companyTimeline"></strong>
