Updated bootstrap-ui and added popovers to the tour areas. Tour is not done yet though.

--- a/src/main/webapp/app/components/home/timeline/TimelineHeaderView.html
+++ b/src/main/webapp/app/components/home/timeline/TimelineHeaderView.html
@@ -21,7 +21,7 @@
     </ul>
     <section class="tatams-content tatams-margin">
         <div class="tatams-content-title">
-            <h3>
+            <h3 popover="Testing timeline" popover-placement="left" popover-trigger="mouseenter">
                 <strong ng-if="$state.includes('tatami.home.home.timeline')" translate="tatami.home.timeline"></strong>
                 <strong ng-if="$state.current.name == 'tatami.home.home.mentions'" translate="tatami.home.mentions"></strong>
                 <strong ng-if="$state.current.name == 'tatami.home.home.favorites'" translate="tatami.home.favorites"></strong>
