--- a/src/main/webapp/assets/css/tatami.css
+++ b/src/main/webapp/assets/css/tatami.css
@@ -1,3 +1,7 @@
+.indent {
+    padding-left: 50px;
+}
+
 #logout {
     cursor: pointer;
 }
@@ -68,7 +72,7 @@
 }
 
 body {
-    background-image: url(/img/wallpaper.jpg);
+    background-image: url(/assets/img/wallpaper.jpg);
 }
 
 h4 {
@@ -577,7 +581,7 @@ div.jGrowl-notification {
 
 .tatams-container {
     min-height: 75px;
-    background-image: url(/img/wallpaper.jpg);
+    background-image: url(/assets/img/wallpaper.jpg);
 }
 
 .tatam-expand-container {
@@ -789,8 +793,8 @@ div.jGrowl-notification {
 .statusitem-name {
     padding: 0;
     margin: 0;
-    margin-top: -4px;
-    margin-bottom: 7px;
+    /*margin-top: -4px;*/
+    /*margin-bottom: 7px;*/
 }
 
 .statusitem-content {
@@ -810,7 +814,7 @@ div.jGrowl-notification {
     padding-top : 7px;
 }
 
-#before{
+#before {
     padding: 0px;
     margin: 0px;
 }
@@ -819,7 +823,7 @@ div.jGrowl-notification {
 
 }
 
-#status-content-container {
+.status-content-container {
     margin-left: 65px;
     margin-right: 30px;
 }
@@ -833,14 +837,14 @@ div.jGrowl-notification {
 }
 
 @media screen and (min-width: 767px) {
-    #buttons {
+    .buttons {
         clear: both;
         margin-left: 60px;
     }
 }
 
 @media screen and (max-width: 767px) {
-    #buttons {
+    .buttons {
         clear: both;
     }
 
