--- a/src/main/webapp/app/components/home/status/StatusView.html
+++ b/src/main/webapp/app/components/home/status/StatusView.html
@@ -1,17 +1,15 @@
 <section class="tatams-container">
     <section class="timeline">
         <div class="tatams" ng-repeat="status in statuses">
-            <div ng-class="{ 'tatam-background': status.statusId != $stateParams.statusId }" class="tatam pointer tatam-border-lr tatam-hover" style="display: block;">
-                <div id="before">
-                </div>
-                <div id="current" ui-sref="tatami.home.home.status({ statusId: status.statusId })" ng-mouseenter="showButtonRow = true" ng-mouseleave="showButtonRow = false">
+            <div ng-class="{ 'tatam-background': status.statusId != $stateParams.statusId, 'status-top-rounded': $index == 0, 'status-bottom-rounded': $index == statuses.length - 1 }" class="tatam pointer tatam-border-lr" style="display: block;">
+                <div ng-mouseenter="showButtonRow = true" ng-mouseleave="showButtonRow = false">
                     <div ng-class="{ 'favorite': status.favorite, 'share': status.shareByMe, 'both': status.favorite && status.shareByMe }">
                         <div class="pull-left background-image-fffix statusitem-img">
                             <a ui-sref="tatami.home.profile.statuses({ username: status.username })">
                                 <div class="img img-rounded img-medium" ng-style="{ 'background-image': 'url(' + status.avatarURL + ')' }"></div>
                             </a>
                         </div>
-                        <div ui-sref="tatami.home.home.status({ statusId: status.statusId })" class="status-content-container">
+                        <div class="status-content-container">
                             <h5 class="statusitem-name">
                                 <!-- Possible backend bug where SHARE type statuses have shareByMe=true and sharedByUsername == profile.username -->
                                 <small ng-if="status.type == 'SHARE'">
@@ -32,7 +30,7 @@
                                 <span ng-if="status.type == 'MENTION_FRIEND'" translate="tatami.home.status.followed"></span>
                                 <small> · </small>
                                 <!-- Replace hover title with hover bubble -->
-                                <a ui-sref="tatami.home.home.status({ statusId: status.statusId })">
+                                <a ui-sref="tatami.home.status({ statusId: status.statusId })">
                                     <small ng-if="!isOneDayOrMore(status.statusDate)" title="{{ status.statusDate | amDateFormat:'h:mm A - D MMM YYYY'}}" am-time-ago="status.statusDate"></small>
                                     <small ng-if="isOneDayOrMore(status.statusDate)" title="{{ status.statusDate | amDateFormat:'h:mm A - D MMM YYYY'}}">{{ status.statusDate | amDateFormat:'MMM D'}}</small>
                                 </a>
@@ -58,13 +56,13 @@
                                 <span class="glyphicon glyphicon-bullhorn">
                                     {{ 'tatami.home.status.isAnnounced' | translate }}
                                 </span>
-                                <a ui-sref="tatami.home.status({ status: status.sharedByUsername })">@{{ status.sharedByUsername }}</a>
+                                <a ui-sref="tatami.home.status({ statusId: status.sharedByUsername })">@{{ status.sharedByUsername }}</a>
                             </small>
 
                             <small ng-if="status.replyTo && status.type !== 'ANNOUNCEMENT'">
                                 <span class="glyphicon glyphicon-share-alt"></span>
                                 <span translate="tatami.home.status.replyTo"></span>
-                                <a ui-sref="tatami.home.status({ status: status.replyTo })">@{{ status.replyToUsername }}</a>
+                                <a ui-sref="tatami.home.status({ statusId: status.replyTo })">@{{ status.replyToUsername }}</a>
                                 <br>
                             </small>
 
@@ -92,8 +90,7 @@
                             <div>
                                 <small class="statusitem-footer">
                                     <span>
-                                        <!-- Might be better to change these ng-if's to ng-show, that way we aren't removing the entire DOM element on each hover over -->
-                                        <button ui-sref="tatami.home.home.status.post({ 'statusId': status.statusId })" class="btn-link status-action status-action-reply button-ios">
+                                        <button ui-sref="tatami.home.status.post({ statusIdReply: status.statusId })" class="btn-link status-action status-action-reply button-ios">
                                             <i class="glyphicon glyphicon-comment"></i>
                                             <span translate="tatami.home.status.reply"></span>
                                         </button>
@@ -105,7 +102,7 @@
                                             <i class="glyphicon glyphicon-star"></i>
                                             <span translate="tatami.home.status.favorite"></span>
                                         </button>
-                                        <button ng-click="announceStatus(status)" ng-show="isAdmin && status.groupId === null" class="btn-link status-action status-action-announce button-ios">
+                                        <button ng-if="isAdmin && status.groupId === null" ng-click="announceStatus(status)" class="btn-link status-action status-action-announce button-ios">
                                             <i class="glyphicon glyphicon-bullhorn"></i>
                                             <span translate="tatami.home.status.announce"></span>
                                         </button>
@@ -115,7 +112,7 @@
                                         </button>
                                     </span>
                                     <span ng-if="status.replyTo" class="pull-right">
-                                        <a ui-sref="tatami.home.home.status({ statusId: status.statusId })" class="btn-link status-action button-ios">
+                                        <a ui-sref="tatami.home.status({ statusId: status.statusId })" class="btn-link status-action button-ios">
                                             <span translate="tatami.home.status.viewConversation"></span>
                                         </a>
                                     </span>
@@ -125,8 +122,6 @@
 
                         <div id="share"></div>
                     </div>
-                </div>
-                <div id="after">
                 </div>
             </div>
         </div>
