--- a/src/main/webapp/assets/css/tatami.css
+++ b/src/main/webapp/assets/css/tatami.css
@@ -6,6 +6,14 @@
     cursor: pointer;
 }
 
+.status-top-rounded {
+    border-radius: 5px 5px 0px 0px;
+}
+
+.status-bottom-rounded {
+    border-radius: 0px 0px 5px 5px;
+}
+
 @media screen and (max-width: 767px) {
     .navbar .nav, .navbar .navbar-form {
         float: none;
