Fixed look of SearchHeaderView

--- a/src/main/webapp/app/components/home/search/SearchHeaderView.html
+++ b/src/main/webapp/app/components/home/search/SearchHeaderView.html
@@ -1,7 +1,7 @@
 <div>
     <ul class="homebody-nav nav nav-justified">
-        <li>
-            <a>
+        <li ui-sref-active="active">
+            <a ui-sref="tatami.home.search">
             <i class="glyphicon glyphicon-search"></i>
             <span translate="tatami.home.searchPage.title"></span>
             </a>
