fixed rounded edges on a single status

--- a/src/main/webapp/assets/css/tatami.css
+++ b/src/main/webapp/assets/css/tatami.css
@@ -14,6 +14,10 @@
     border-radius: 0px 0px 5px 5px;
 }
 
+.status-both-rounded {
+    border-radius: 5px 5px 5px 5px;
+}
+
 @media screen and (max-width: 767px) {
     .navbar .nav, .navbar .navbar-form {
         float: none;
