changed timeline anchor focus color and fixed having to double click on drop down menus

--- a/src/main/webapp/assets/css/tatami.css
+++ b/src/main/webapp/assets/css/tatami.css
@@ -207,6 +207,10 @@ div.jGrowl-notification {
     color: #CCCCCC;
 }
 
+.navbar .nav > li > a:focus {
+    color: #CCCCCC;
+}
+
 .navbar .nav > li > a:hover {
     color: white;
 }
