--- a/src/main/webapp/app/components/home/HomeView.html
+++ b/src/main/webapp/app/components/home/HomeView.html
@@ -1,5 +1,5 @@
 <div>
-    <div ng-init="showSearchAccountPost = true" class="row">
+    <div class="row">
         <aside ui-view="homeSide" id="tatamiSide" class="col-span-3"></aside>
         <section ui-view="homeBody" id="tatamiBody" class="col-span-6">
             <div ui-view="homeBodyHeader"></div>
