closing post modal now returns to the correct state

--- a/src/main/webapp/app/components/home/status/StatusView.html
+++ b/src/main/webapp/app/components/home/status/StatusView.html
@@ -101,7 +101,7 @@
                             <div>
                                 <small class="statusitem-footer">
                                     <span>
-                                        <button ui-sref="tatami.home.status.post({ statusIdReply: status.statusId })" class="btn-link status-action status-action-reply button-ios">
+                                        <button ng-click="openReplyModal(status)" class="btn-link status-action status-action-reply button-ios">
                                             <i class="glyphicon glyphicon-comment"></i>
                                             <span translate="tatami.home.status.reply"></span>
                                         </button>
