--- a/src/main/webapp/app/components/home/profile/ProfileHeaderView.html
+++ b/src/main/webapp/app/components/home/profile/ProfileHeaderView.html
@@ -22,7 +22,7 @@
     <section class="tatams-content tatams-margin">
         <div class="tatams-content-title">
             <h3>
-                <span ng-if="$state.current.name == 'tatami.home.profile.statuses'">
+                <span ng-if="$state.includes('tatami.home.profile.statuses')">
                     <span ng-if="user.you">
                         <strong ng-if="user.statusCount == 1" translate="tatami.home.profile.youStatusesSingular"></strong>
                         <strong ng-if="user.statusCount <= 0 || user.statusCount > 1" translate="tatami.home.profile.youStatusesPlural" translate-values="{ amount: user.statusCount }"></strong>
@@ -39,7 +39,7 @@
                     </span>
                 </span>
 
-                <span ng-if="$state.current.name == 'tatami.home.profile.following'">
+                <span ng-if="$state.includes('tatami.home.profile.following')">
                     <span ng-if="user.you">
                         <strong ng-if="user.friendsCount == 1" translate="tatami.home.profile.youFollowingSingular"></strong>
                         <strong ng-if="user.friendsCount <= 0 || user.friendsCount > 1" translate="tatami.home.profile.youFollowingPlural" translate-values="{ amount: user.friendsCount }"></strong>
@@ -56,7 +56,7 @@
                     </span>
                 </span>
 
-                <span ng-if="$state.current.name == 'tatami.home.profile.followers'">
+                <span ng-if="$state.includes('tatami.home.profile.followers')">
                     <span ng-if="user.you">
                         <strong ng-if="user.followersCount == 1" translate="tatami.home.profile.youFollowersSingular"></strong>
                         <strong ng-if="user.followersCount <= 0 || user.followersCount > 1" translate="tatami.home.profile.youFollowersPlural" translate-values="{ amount: user.followersCount }"></strong>
