--- a/src/main/webapp/app/components/home/timeline/TimelineHeaderView.html
+++ b/src/main/webapp/app/components/home/timeline/TimelineHeaderView.html
@@ -39,9 +39,9 @@
                 skip="false"
                 on-end="onTourEnd(tour)">
                 <strong ng-if="$state.includes('tatami.home.home.timeline')" translate="tatami.home.timeline"></strong>
-                <strong ng-if="$state.current.name == 'tatami.home.home.mentions'" translate="tatami.home.mentions"></strong>
-                <strong ng-if="$state.current.name == 'tatami.home.home.favorites'" translate="tatami.home.favorites"></strong>
-                <strong ng-if="$state.current.name == 'tatami.home.home.company'" translate="tatami.home.companyTimeline"></strong>
+                <strong ng-if="$state.includes('tatami.home.home.mentions')" translate="tatami.home.mentions"></strong>
+                <strong ng-if="$state.includes('tatami.home.home.favorites')" translate="tatami.home.favorites"></strong>
+                <strong ng-if="$state.includes('tatami.home.home.company')" translate="tatami.home.companyTimeline"></strong>
             </h3>
         </div>
     </section>
