smaller profile image on home sidebar, click it to return to full size

--- a/src/main/webapp/assets/css/tatami.css
+++ b/src/main/webapp/assets/css/tatami.css
@@ -261,6 +261,14 @@ div.jGrowl-notification {
     -ms-behavior: url(/assets/vendor/backgroundsize.min.htc);
 }
 
+.img-medium-big {
+    width: 150px;
+    height: 150px;
+    background-position: center center;
+    background-size: cover;
+    -ms-behavior: url(/assets/vendor/backgroundsize.min.htc);
+}
+
 .img-big {
     width: 200px;
     height: 200px;
