Revert "fixed polling, removed angular-poller, code cleanup"
This reverts commit 05eddb21b4f2a9653d76d90e0e337601f19f3092.

BUG: Statuses stop showing when this commit was accepted. Please
correct and resubmit.

--- a/src/main/webapp/app/components/account/groups/list/GroupsListView.html
+++ b/src/main/webapp/app/components/account/groups/list/GroupsListView.html
@@ -1,6 +1,6 @@
 <div>
     <form class="row-fluid littleMargeBot">
-        <input ng-show="$state.is('tatami.account.groups.main.top.search')" ng-model="current.searchString" ng-trim="false" ng-change="search()" id="block_filter" type="text" class="search-query col-span-12" name="result_filter" autocomplete="off" placeholder="{{ 'tatami.account.groups.search' | translate }}">
+        <input ng-show="$state.current.name === 'tatami.account.groups.main.top.search'" ng-model="current.searchString" ng-trim="false" ng-change="search()" id="block_filter" type="text" class="search-query col-span-12" name="result_filter" autocomplete="off" placeholder="{{ 'tatami.account.groups.search' | translate }}">
     </form>
     <table class="table noCollapse">
         <tbody>
