Display the full avatar in profile card

--- a/src/main/webapp/css/tatami.css
+++ b/src/main/webapp/css/tatami.css
@@ -303,6 +303,7 @@ div.jGrowl-notification{
 
 .profile-card > .img {
     margin-right: 5px;
+    background-size: contain;
 }
 
 /*.tatam, .useritem {*/
