--- a/src/main/webapp/app/components/login/google/GoogleLoginView.html
+++ b/src/main/webapp/app/components/login/google/GoogleLoginView.html
@@ -7,7 +7,7 @@
             <form form="submit" action="/tatami/j_spring_pac4j_security_check" method="post" accept-charset="utf-8">
                 <fieldset>
                     <div class="control-group">
-                        <button ng-click="logout()" type="submit" id="proceed_google" class="btn btn-primary btn-block" translate="tatami.login.googleApps.login"></button>
+                        <button type="submit" id="proceed_google" class="btn btn-primary btn-block" translate="tatami.login.googleApps.login"></button>
                     </div>
                 </fieldset>
             </form>
